--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "react-scripts": "0.2.2"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "classnames": "^2.2.5",
     "react": "^15.3.1",
+    "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1",
     "react-google-maps": "^4.11.0"
   },
