--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1",
-    "react-google-maps": "^4.11.0"
+    "react-google-maps": "^4.11.0",
+    "react-icons": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
