--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "axios": "^0.14.0",
     "bootstrap": "^3.3.7",
     "classnames": "^2.2.5",
-    "react": "^15.3.1",
+    "moment": "^2.15.0",
+    "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1",
     "react-google-maps": "^4.11.0",
-    "react-icons": "^2.2.1"
+    "react-icons": "^2.2.1",
+    "react-star-rating-component": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
