--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1",
+    "react-dropzone": "^3.6.0",
     "react-google-maps": "^4.11.0",
     "react-icons": "^2.2.1",
     "react-star-rating-component": "^1.2.1"
