--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-material-design": "^0.5.10",
     "moment": "^2.15.0",
     "react": "^15.3.2",
+    "react-addons-update": "^15.3.0",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.2",
     "react-dropzone": "^3.6.0",
