--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^0.14.0",
     "bootstrap": "^3.3.7",
+    "bootstrap-material-design": "^0.5.10",
     "moment": "^2.15.0",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
@@ -15,7 +16,8 @@
     "react-dropzone": "^3.6.0",
     "react-google-maps": "^4.11.0",
     "react-icons": "^2.2.1",
-    "react-star-rating-component": "^1.2.1"
+    "react-star-rating-component": "^1.2.1",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
