--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-dropzone": "^3.6.0",
     "react-google-maps": "^4.11.0",
     "react-icons": "^2.2.1",
-    "react-star-rating-component": "^1.2.1",
-    "underscore": "^1.8.3"
+    "react-star-rating-component": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
